# rpls-back

./: .gitignore  Dockerfile  README.MD  README.md  dictionnaire_rpls.xls  docker-compose.yml  pyproject.toml  requirements.txt
app/: custom_pagination.py  settings.py  urls.py
app/api/: router.py
app/api/models/: __init__.py  address.py  building.py  city.py  department.py  epci.py  housing.py  parcel.py  region.py
app/api/services/: __init__.py  address_service.py  building_service.py  city_service.py  data_integration_service.py  department_service.py  epci_service.py  geocodage_service.py  housing_service.py  parcel_service.py  reference_geographical_database_service.py  region_service.py
app/api/views/: __init__.py  data_integration_view.py  geocodage_view.py
static/: rpls_cannes.csv  rpls_cannes_geocoded_pierson.csv
static/results/: rpls_cannes_geocoded.csv
